--- a/app/src/main/res/layout/dialog_expression_success.xml
+++ b/app/src/main/res/layout/dialog_expression_success.xml
@@ -55,6 +55,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/tv_header"
                     style="?attr/textAppearanceSubtitle1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
