--- a/app/src/main/res/layout/empty.xml
+++ b/app/src/main/res/layout/empty.xml
@@ -53,8 +53,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="15dp"
                 android:text="@string/nothing_found"
+                android:textAlignment="center"
                 android:textStyle="bold"
-
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
