--- a/app/src/main/res/layout/fragment_expression.xml
+++ b/app/src/main/res/layout/fragment_expression.xml
@@ -40,7 +40,6 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:text="@string/tv_history"
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
@@ -48,15 +47,33 @@
             android:id="@+id/inc_title"
             layout="@layout/expression_history" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/patient_list"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingBottom="@dimen/_100dp"
-            android:scrollbars="vertical"
-            app:layoutManager="LinearLayoutManager"
-            tools:listitem="@layout/expression_history" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/cp_title"
+                style="?attr/textAppearanceBody2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="15dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/patient_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="@dimen/_100dp"
+                android:scrollbars="vertical"
+                app:layoutManager="LinearLayoutManager"
+                tools:listitem="@layout/expression_history" />
+        </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
