--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -15,39 +15,44 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_15dp" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/add_patient_container"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2.7" />
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal"
-        android:padding="@dimen/_15dp"
-        android:weightSum="2">
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/add_patient_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/_100dp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_submit"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5dp"
-            android:backgroundTint="@color/dim_red"
-            android:text="@string/action_submit"
-            app:cornerRadius="@dimen/_25dp" />
+            android:layout_alignParentBottom="true"
+            android:gravity="end"
+            android:orientation="horizontal"
+            android:padding="@dimen/_15dp"
+            android:weightSum="2">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_cancel"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5dp"
-            android:text="@string/action_cancel"
-            app:cornerRadius="@dimen/_25dp"
-            app:strokeColor="@color/dim_red" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5dp"
+                android:backgroundTint="@color/dim_red"
+                android:text="@string/action_submit"
+                app:cornerRadius="@dimen/_25dp" />
 
-    </LinearLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_cancel"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5dp"
+                android:text="@string/action_cancel"
+                app:cornerRadius="@dimen/_25dp"
+                app:strokeColor="@color/dim_red" />
 
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
