--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,6 +58,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.3"
+                android:textAllCaps="false"
                 android:backgroundTint="@color/design_default_color_error"
                 android:text="@string/action_enter_stock"
                 android:textColor="@android:color/white"
@@ -73,6 +74,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.3"
+                android:textAllCaps="false"
                 android:backgroundTint="@color/design_default_color_error"
                 android:text="@string/action_view_dhm"
                 android:textColor="@android:color/white"
