--- a/app/src/main/res/layout-large/baby_list_item_view.xml
+++ b/app/src/main/res/layout-large/baby_list_item_view.xml
@@ -62,25 +62,28 @@
                 android:orientation="vertical"
                 android:padding="2dp">
 
-                <TextView  android:textSize="16sp"
+                <TextView
                     android:id="@+id/app_baby_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="16sp"
                     app:autoSizeTextType="uniform" />
 
-                <TextView  android:textSize="16sp"
+                <TextView
                     android:id="@+id/app_mother_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="16sp"
                     app:autoSizeTextType="uniform" />
 
-                <TextView  android:textSize="16sp"
+                <TextView
                     android:id="@+id/app_ip_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="16sp"
                     app:autoSizeTextType="uniform" />
             </LinearLayout>
 
@@ -126,27 +129,30 @@
                 android:orientation="vertical"
                 android:padding="2dp">
 
-                <TextView  android:textSize="16sp"
+                <TextView
                     android:id="@+id/app_birth_weight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody2"
+                    android:textSize="16sp"
                     app:autoSizeTextType="uniform" />
 
-                <TextView   android:textSize="16sp"
+                <TextView
                     android:id="@+id/app_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="@color/dim_red"
+                    android:textSize="16sp"
                     app:autoSizeTextType="uniform" />
 
-                <TextView   android:textSize="16sp"
+                <TextView
                     android:id="@+id/app_rate_gain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="@color/dim_green"
+                    android:textSize="16sp"
                     app:autoSizeTextType="uniform" />
             </LinearLayout>
 
