--- a/app/src/main/res/layout/fragment_custom_registration.xml
+++ b/app/src/main/res/layout/fragment_custom_registration.xml
@@ -250,7 +250,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
-                    android:drawableEnd="@drawable/gm_calendar_today_24"
+                    android:drawableEnd="@drawable/calendar_today_24"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
@@ -275,7 +275,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
-                    android:drawableEnd="@drawable/gm_schedule_24"
+                    android:drawableEnd="@drawable/schedule_24"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
