--- a/app/src/main/res/layout/fragment_dhm_orders.xml
+++ b/app/src/main/res/layout/fragment_dhm_orders.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:weightSum="3">
 
         <androidx.appcompat.widget.SearchView
@@ -23,7 +23,7 @@
             android:layout_weight="1"
             app:iconifiedByDefault="false"
             app:queryBackground="@android:color/transparent"
-            app:queryHint="@string/query_ip_search" />
+            app:queryHint="@string/query_search" />
 
         <LinearLayout
             android:layout_width="0dp"
