--- a/app/src/main/res/layout/routes.xml
+++ b/app/src/main/res/layout/routes.xml
@@ -3,6 +3,7 @@
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/til_type"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     android:layout_weight="1"
