--- a/app/src/main/res/layout/update_prescription.xml
+++ b/app/src/main/res/layout/update_prescription.xml
@@ -356,6 +356,15 @@
             android:visibility="gone">
 
             <include
+                android:id="@+id/dhm_signed"
+                layout="@layout/frequency"
+                android:layout_width="0dp"
+                android:visibility="gone"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="3dp"
+                android:layout_weight="1" />
+            <include
                 android:id="@+id/dhm_reason"
                 layout="@layout/reason"
                 android:layout_width="0dp"
@@ -383,6 +392,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_15dp"
             android:orientation="horizontal"
+            android:weightSum="2"
             android:visibility="gone">
 
             <include
