--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -177,7 +177,7 @@
 
     <ImageView
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="0dp"
         android:src="@drawable/path"
         app:layout_constraintHeight_percent="0.03"
