--- a/app/src/main/res/layout/positioning_item.xml
+++ b/app/src/main/res/layout/positioning_item.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginTop="@dimen/_10dp"
             android:text="@string/app_cleaned"
             android:textAppearance="?attr/textAppearanceSubtitle1"
             android:textStyle="bold" />
