--- a/app/src/main/res/layout/fragment_positioning.xml
+++ b/app/src/main/res/layout/fragment_positioning.xml
@@ -42,7 +42,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tv_positioning"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
 
         <include
             android:id="@+id/inc_title"
