--- a/app/src/main/res/layout/fragment_baby_assessment.xml
+++ b/app/src/main/res/layout/fragment_baby_assessment.xml
@@ -48,7 +48,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/black" />
+                    android:background="@color/colorPrimary" />
 
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/add_patient_container"
