--- a/app/src/main/res/layout/fragment_breast.xml
+++ b/app/src/main/res/layout/fragment_breast.xml
@@ -38,10 +38,12 @@
         android:visibility="gone">
 
         <TextView
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tv_breast_history"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
 
         <include
             android:id="@+id/inc_title"
@@ -61,53 +63,54 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/ln_collection"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/add_patient_container"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2.7"
-            android:visibility="gone" />
-
-        <include
-            android:id="@+id/inc_positioning"
-            layout="@layout/breast_assessment" />
 
         <LinearLayout
+            android:id="@+id/ln_collection"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:orientation="horizontal"
-            android:padding="@dimen/_15dp"
-            android:weightSum="2">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_submit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:backgroundTint="@color/dim_red"
-                android:text="@string/action_submit"
-                app:cornerRadius="@dimen/_25dp" />
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/add_patient_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2.7"
+                android:visibility="gone" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_cancel"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
+            <include
+                android:id="@+id/inc_positioning"
+                layout="@layout/breast_assessment" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:text="@string/action_cancel"
-                app:cornerRadius="@dimen/_25dp"
-                app:strokeColor="@color/dim_red" />
+                android:gravity="end"
+                android:orientation="horizontal"
+                android:padding="@dimen/_15dp"
+                android:weightSum="2">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_submit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5dp"
+                    android:backgroundTint="@color/dim_red"
+                    android:text="@string/action_submit"
+                    app:cornerRadius="@dimen/_25dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_cancel"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5dp"
+                    android:text="@string/action_cancel"
+                    app:cornerRadius="@dimen/_25dp"
+                    app:strokeColor="@color/dim_red" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
