--- a/app/src/main/res/layout/position_assessment.xml
+++ b/app/src/main/res/layout/position_assessment.xml
@@ -19,7 +19,9 @@
             android:layout_marginStart="@dimen/_10dp"
             android:text="@string/app_support_mother"
             android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
+
         <include
             android:id="@+id/data_hands"
             layout="@layout/positioning_item" />
