--- a/app/src/main/res/layout/breast_assessment.xml
+++ b/app/src/main/res/layout/breast_assessment.xml
@@ -19,6 +19,7 @@
             android:layout_marginStart="@dimen/_10dp"
             android:text="@string/app_baby_assess"
             android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
         <include
@@ -57,6 +58,7 @@
             android:layout_marginTop="@dimen/_15dp"
             android:text="@string/app_mother_assess"
             android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
         <include
