--- a/app/src/main/res/layout/fragment_feeding.xml
+++ b/app/src/main/res/layout/fragment_feeding.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_current_prescription"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+           android:textAppearance="?attr/textAppearanceSubtitle1"
             android:visibility="gone" />
 
         <include
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_upcoming"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+           android:textAppearance="?attr/textAppearanceSubtitle1"
             android:visibility="gone" />
 
         <include
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_feeding_history"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+           android:textAppearance="?attr/textAppearanceSubtitle1" />
 
 
         <include
@@ -83,7 +83,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:text="@string/app_enter_feeding"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+            android:textColor="@color/colorPrimary"
+           android:textAppearance="?attr/textAppearanceSubtitle1" />
 
         <include
             android:id="@+id/control"
