--- a/app/src/main/res/layout/fragment_baby_dashboard.xml
+++ b/app/src/main/res/layout/fragment_baby_dashboard.xml
@@ -99,6 +99,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/app_current_weight"
+                            android:textSize="@dimen/_12dp"
                             android:textAppearance="?attr/textAppearanceBody2" />
 
                         <LinearLayout
@@ -161,6 +162,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/app_mothers_milk"
                             android:textAlignment="center"
+                            android:textSize="@dimen/_12dp"
                             android:textAppearance="?attr/textAppearanceBody2" />
 
                     </LinearLayout>
@@ -237,6 +239,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/app_daily_feeds"
+                            android:textAlignment="center"
+                            android:textSize="@dimen/_12dp"
                             android:textAppearance="?attr/textAppearanceBody2" />
 
                         <LinearLayout
@@ -293,15 +297,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/app_zero"
-
                             android:textAppearance="?attr/textAppearanceBody2"
-                            android:textSize="@dimen/_20sp" />
+                            android:textSize="@dimen/_18sp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/app_expressions"
                             android:textAlignment="center"
+                            android:textSize="@dimen/_12dp"
                             android:textAppearance="?attr/textAppearanceBody2" />
 
                     </LinearLayout>
@@ -427,7 +431,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/app_total_expressed"
-
+                                    android:textSize="@dimen/_12dp"
                                     android:textAppearance="?attr/textAppearanceBody2" />
 
                                 <LinearLayout
