--- a/app/src/main/res/layout/fragment_baby_lactation.xml
+++ b/app/src/main/res/layout/fragment_baby_lactation.xml
@@ -178,7 +178,6 @@
                                     android:id="@+id/tv_total_expressed"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-
                                     android:textAppearance="?attr/textAppearanceSubtitle1"
                                     android:textSize="@dimen/_20sp" />
 
@@ -186,8 +185,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/app_total_expressed"
-
-                                    android:textAppearance="?attr/textAppearanceBody2" />
+                                    android:textAppearance="?attr/textAppearanceBody2"
+                                    android:textSize="@dimen/_12dp" />
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
