--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,7 +99,7 @@
                 android:id="@+id/ePass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:inputType="numberPassword"
                 android:textSize="12sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
