--- a/app/src/main/res/layout/fragment_babies.xml
+++ b/app/src/main/res/layout/fragment_babies.xml
@@ -53,19 +53,24 @@
             app:cornerRadius="@dimen/_35dp" />
     </LinearLayout>
 
-    <include
-        android:id="@+id/patient_list_container"
-        layout="@layout/patient_list_view"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ln_search" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/ln_search">
 
-    <ProgressBar
-        android:id="@+id/pb_loading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/patient_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/_100dp"
+            android:scrollbars="vertical"
+            app:layoutManager="LinearLayoutManager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/baby_list_item_view" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
     <ImageView
         android:id="@+id/img_empty"
